--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,3 +44,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+URL: https://github.com/malcolmbarrett/au.rcourse
+BugReports: https://github.com/malcolmbarrett/au.rcourse/issues
