--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Authors@R:
 Description: Install course materials for the Statistical
     Programming in R.
 License: CC BY 4.0
+URL: https://github.com/malcolmbarrett/au.rcourse
+BugReports: https://github.com/malcolmbarrett/au.rcourse/issues
 Imports: 
     broom,
     cidata,
@@ -28,21 +30,22 @@ Imports:
     mice,
     nycflights13,
     plotly,
+    renv,
     rmarkdown,
     roxygen2,
     sf,
     shiny,
     shinythemes,
     skimr,
+    targets (>= 0.0.2),
     tidyverse (>= 1.3.0),
     usethis,
     visdat
 Remotes: 
     Financial-Times/ftplottools,
-    malcolmbarrett/cidata
+    malcolmbarrett/cidata,
+    ropensci/targets@*release
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-URL: https://github.com/malcolmbarrett/au.rcourse
-BugReports: https://github.com/malcolmbarrett/au.rcourse/issues
