--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,17 +7,19 @@ Authors@R:
            role = c("aut", "cre"),
            email = "malcolmbarrett@gmail.com",
            comment = c(ORCID = "0000-0003-0299-5825"))
-Description: Install course materials for the Statistical
-    Programming in R.
+Description: Install course materials for the Statistical Programming in
+    R.
 License: CC BY 4.0
 URL: https://github.com/malcolmbarrett/au.rcourse
 BugReports: https://github.com/malcolmbarrett/au.rcourse/issues
 Imports: 
+    bookdown,
     broom,
     cidata,
     cowplot,
     datasauRus,
     devtools,
+    distill,
     DT,
     flexdashboard,
     ftplottools (>= 0.1.5),
@@ -25,26 +27,38 @@ Imports:
     geepack,
     GGally,
     gganimate,
+    ggdag,
     ggfortify,
     ggrepel,
+    ggtext,
+    gtsummary,
+    haven,
+    here,
+    hexbin,
+    knitr,
+    maps,
     mice,
     nycflights13,
+    patchwork,
     plotly,
+    ragg,
     renv,
     rmarkdown,
     roxygen2,
+    scales,
+    scico,
     sf,
     shiny,
     shinythemes,
     skimr,
-    targets (>= 0.0.2),
+    tarchetypes (>= 0.3.0),
+    targets (>= 0.6.0),
     tidyverse (>= 1.3.0),
     usethis,
     visdat
 Remotes: 
     Financial-Times/ftplottools,
-    malcolmbarrett/cidata,
-    ropensci/targets@*release
+    malcolmbarrett/cidata
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
